ZXTune library and distributed applications changelog.

Annotation:
[+] - new feature
[-] - removed feature/rudiment
[*] - fix/improvement

--- $Rev$ from $Date$

[+] Supported STP 2.0 player analysis (COMPILEDSTP2) to retreive metainformation
[*] DigitalMusicMaker: fixed volume slide effect
[*] ChipTracker: fixed microslide effect

--- Rev1487 from 27.12.2011

[+] Supported AS0/ASC players analysis (COMPILEDASC0, COMPILEDASC1, COMPILEDASC2) to retreive metainformation
[+] Supported STP player analysis (COMPILEDSTP) to retreive metainformation
[*] Improved metainformation analysis for AS0/ASC modules
[*] zxtune-qt: support for enlighted playlist saving

--- Rev1472 from 19.12.2011

[+] ASC Sound Master 0.xx format support (AS0)
[*] Improved ASC detection
[*] Improved STC/ST1 metainformation retreive

--- Rev1460 from 13.12.2011

[+] DirectSound backend support
[*] Fixed STP playback with invalid loop information
[*] Fixed ASC playback
[*] Fixed metainformation retreive from ASC modules
[*] zxtune-qt: main menu reworked

--- Rev1450 from 05.12.2011

[+] Uncompressed TeleDisk images support (TD0)
[*] Improved TRD images processing
[*] Improved STP detection
[*] zxtune-qt: new playlist by double-click on tabs area
[*] zxtune-qt: much comfortable 'del' key behaviour

--- Rev1439 from 30.11.2011

[+] Supported AY conversion to all supported formats (PSG, ZX50, FYM)
[*] STC detection speedup
[*] Fixed STC/ST1 playback
[*] Fixed crash on some DST files
[*] Reworked STP detection
[+] zxtune-qt: added modules selecting by type
[*] zxtune-qt: reworked context menu

--- Rev1428 from 21.11.2011

[*] Fixed DST, SNA128, STC and ST1 detection
[*] zxtune-qt: new icons from Restorer
[*] zxtune-qt: fixed some crashes while loading playlists

--- Rev1421 from 15.11.2011

[*] zxtune-qt: all playlist operations are asynchronous
[*] zxtune-qt: web-style operations progress status
[*] zxtune-qt: playlist renaming support